# libcopper

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  GUIDELINES.md  LICENSE  README.md  test.bat  test.sh
.github/workflows/: ci.yml  release.yml
cmake/: CopperPlatform.cmake  copperConfig.cmake.in  generate_headers.cmake
examples/: CMakeLists.txt
examples/log/: main.c
examples/platform_info/: main.c
include/: copper.h
include/copper/: arena.h  atomic.h  bytesize.h  copper.h  defs.h  env.h  error.h  fs.h  log.h  optional.h  platform.h  result.h  sync.h  thread.h  time.h  typedef.h  version.h.in
include/copper/internal/: int_error.h  int_unicode.h
include/private/: arena.h  dynarr.h  string.h  version.h.in
src/: arena.c  atomic.c  copper.c  env.c  error.c  fs.c  log.c  string.c  sync.c  thread.c  time.c
tests/: CMakeLists.txt  arena_test.c  string_test.c  test_arena.c  test_atomic.c  test_bytesize.c  test_condvar.c  test_fs.c  test_log.c  test_mutex.c  test_platform.c  test_rwlock.c  test_thread.c  test_time.c
